--- a/css/scss/_homepage.scss
+++ b/css/scss/_homepage.scss
@@ -83,7 +83,7 @@
   color: $secondary-color;
 }
 
-//---- media query pre 1100px a menej ----
+//----MEDIA QUERY PRE 1100px A MENEJ ----
 
 @media only screen and (max-width: 68.75em) {
   .hero-image {
@@ -110,7 +110,7 @@
   }
 }
 
-//---- media query pre 825px a menej ----
+//---- MEDIA QUERY PRE 825px A MENEJ ----
 
 @media only screen and (max-width: 51.5625em) {
   .hero-image {
@@ -137,7 +137,7 @@
   }
 }
 
-//---- media query pre 680px a menej ----
+//---- MEDIA QUERY PRE 680px A MENEJ ----
 
 @media only screen and (max-width: 42.5em) {
   .hero-image {
@@ -165,7 +165,7 @@
   }
 }
 
-//---- media query pre 550px a menej ----
+//---- MEDIA QUERY PRE 550px A MENEJ ----
 
 @media only screen and (max-width: 34.375em) {
   .hero-image {
@@ -192,7 +192,7 @@
   }
 }
 
-//---- media query pre 420px a menej ----
+//---- MEDIA QUERY PRE 420px A MENEJ ----
 
 @media only screen and (max-width: 26.25em) {
   .hero-image {
