--- a/css/scss/_site-footer.scss
+++ b/css/scss/_site-footer.scss
@@ -1,5 +1,5 @@
 .site-footer {
-  position: relative;
+  position: absolute;
   z-index: -10;
   left: 0;
   top: 4 * 46.875rem + 2.8rem;
@@ -16,7 +16,7 @@
 
   div {
     width: 16.66%;
-    padding: 1rem;
+    padding: 1.5rem;
   }
 
   .box-1,
@@ -29,7 +29,7 @@
 
   h3 {
     text-transform: uppercase;
-    padding: 0.5rem 0 1.5rem 0;
+    padding: 0 0 1.5rem 0;
   }
 
   ul,
@@ -57,15 +57,15 @@
   display: none;
 }
 
-//---- media query pre 1100px a menej ----
+//---- MEDIA QUERY PRE 1100px A MENEJ ----
 
 @media only screen and (max-width: 68.75em) {
-  .site-footer {
-    top: 4 * 43.75rem + 2.8rem;
-  }
-
   .footer-content-desktop {
     display: none;
+  }
+
+  .site-footer {
+    top: 4 * 43.75rem + 2.8rem;
   }
 
   .footer-content-tablet-mobile {
@@ -79,6 +79,7 @@
       flex-direction: column;
       width: 100%;
       border-bottom: 1px solid $main-color;
+
       &:last-child {
         border-bottom: none;
       }
@@ -88,6 +89,7 @@
       position: relative;
       text-transform: uppercase;
       padding: 1rem 1rem;
+      margin: 0;
 
       &:hover {
         cursor: pointer;
@@ -104,6 +106,7 @@
 
       li {
         white-space: wrap;
+
         &:last-child {
           margin-bottom: 0.5rem;
         }
@@ -134,9 +137,19 @@
       transition: transform 0.3s;
     }
 
-    .accordion-content,
-    .accordion-input {
+    input[type="checkbox"] {
       display: none;
+    }
+
+    .accordion-content {
+      // pridane pre animaciu otvarania a zatvarania menu
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.8s; //cubic-bezier(0.4, 0, 0, 0.8)
+
+      li {
+        padding-left: 0.8rem;
+      }
     }
 
     .accordion-input:checked ~ .accordion-content {
@@ -146,35 +159,27 @@
     .accordion-input:checked ~ .accordion-label::after {
       transform: translateY(-50%) rotate(0.5turn);
     }
+
+    .accordion-input[type="checkbox"]:checked + label + .accordion-content {
+      max-height: 500px; // pridane pre animaciu otvarania a zatvarania menu
+    }
   }
 
   div.footer-whitespace {
     height: 2.5rem;
   }
-
-  /* 
-  // skryté
-  block-size: 0;
-  transition-property: block-size, content-visibility;
-  transition-duration: 0.5s;
-  transition-behavior: allow-discrete;
-
-  // viditelné
-  block-size: auto;
-  block-size: calc-size(auto);
-  */
 }
 
-//---- media query pre 825px a menej ----
+//---- MEDIA QUERY PRE 825px A MENEJ ----
 
 @media only screen and (max-width: 51.5625em) {
   .site-footer {
     top: 4 * 40.625rem + 2.8rem;
-    font-size: 0.875rem;
+    //font-size: 0.875rem;
   }
 }
 
-//---- media query pre 680px a menej ----
+//---- MEDIA QUERY PRE 680px A MENEJ ----
 
 @media only screen and (max-width: 42.5em) {
   .site-footer {
@@ -182,7 +187,7 @@
   }
 }
 
-//---- media query pre 550px a menej ----
+//---- MEDIA QUERY PRE 550px A MENEJ ----
 
 @media only screen and (max-width: 34.375em) {
   .site-footer {
@@ -190,7 +195,7 @@
   }
 }
 
-//---- media query pre 420px a menej ----
+//---- MEDIA QUERY PRE 420px A MENEJ ----
 
 @media only screen and (max-width: 26.25em) {
   .site-footer {
