Changed main navigation links + updated hero sections in home page

--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,7 @@ a {
   cursor: pointer;
   border: 1px solid #000000;
   border-radius: 4px;
+  transition: ease 0.5s;
 }
 .primary-menu #left-sidebar-search,
 .primary-menu .hide-on-desktop-menu,
@@ -258,7 +259,7 @@ a {
   position: absolute;
   z-index: -10;
   left: 0;
-  top: 284.05rem;
+  top: 190.3rem;
   width: 100%;
   font-size: 0.75rem;
   background-color: #ffffff;
@@ -313,7 +314,7 @@ a {
     display: none;
   }
   .site-footer {
-    top: 265.3rem;
+    top: 177.8rem;
   }
   .footer-content-tablet-mobile {
     display: flex;
@@ -399,22 +400,22 @@ a {
 }
 @media only screen and (max-width: 51.5625em) {
   .site-footer {
-    top: 246.55rem;
+    top: 165.3rem;
   }
 }
 @media only screen and (max-width: 42.5em) {
   .site-footer {
-    top: 227.8rem;
+    top: 152.8rem;
   }
 }
 @media only screen and (max-width: 34.375em) {
   .site-footer {
-    top: 209.05rem;
+    top: 140.3rem;
   }
 }
 @media only screen and (max-width: 26.25em) {
   .site-footer {
-    top: 190.3rem;
+    top: 127.8rem;
   }
 }
 .hero-image {
@@ -425,52 +426,37 @@ a {
   z-index: -1;
   background-color: #ffffff;
   border-bottom: 1px solid #000000;
-  background-size: cover;
 }
 .hero-image.first {
   top: 2.8rem;
-  background: url("../images/hero-image-men-01.avif") no-repeat;
-  background-size: 1450px;
-  background-position-x: 50%;
-  background-position-y: 50%;
-}
-.hero-image.second {
-  top: 49.675rem;
-  background: url("../images/hero-image-explore-01.jpeg") no-repeat;
-  background-size: 1700px;
-  background-position-x: 50%;
-  background-position-y: 80%;
-  background-color: #cacaca;
-}
-.hero-image.third {
-  top: 96.55rem;
-  background: url("../images/hero-image-women-01.jpg") no-repeat;
-  background-size: 1500px;
-  background-position-x: 50%;
-  background-position-y: 55%;
-}
-.hero-image.fourth {
-  top: 143.425rem;
-  background: url("../images/hero-image-explore-02.webp") no-repeat;
+  background: url("../images/hero-1.webp") no-repeat;
   background-size: 1500px;
   background-position-x: 50%;
   background-position-y: 50%;
   background-color: #97abac;
 }
-.hero-image.fifth {
-  top: 190.3rem;
-  background: url("../images/hero-image-kids-01.avif") no-repeat;
-  background-size: 1450px;
+.hero-image.second {
+  top: 49.675rem;
+  background: url("../images/hero-2.webp") no-repeat;
+  background-size: 1500px;
   background-position-x: 50%;
-  background-position-y: 50%;
+  background-position-y: 60%;
+  background-color: #000000;
 }
-.hero-image.sixth {
-  top: 237.175rem;
-  background: url("../images/hero-image-explore-03.avif") no-repeat;
-  background-size: 1550px;
+.hero-image.third {
+  top: 96.55rem;
+  background: url("../images/hero-3.avif") no-repeat;
+  background-size: 1300px;
   background-position-x: 50%;
-  background-position-y: 50%;
-  background-color: #010101;
+  background-position-y: -120%;
+  background-color: #f4f4f4;
+}
+.hero-image.fourth {
+  top: 143.425rem;
+  background: url("../images/hero-4-E.webp") no-repeat;
+  background-size: 1500px;
+  background-position-x: 50%;
+  background-color: #050407;
 }
 
 .hero-content {
@@ -494,15 +480,15 @@ a {
 }
 .hero-content a {
   font-size: 0.75rem;
-  line-height: 5rem;
-  padding: 0.5rem 2rem;
+  line-height: 4rem;
+  padding: 0.5rem 1.5rem;
   color: #000000;
   background-color: #ffffff;
+  border: 1px solid #000000;
+  border-radius: 0.2rem;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
-  border: 1px solid #000000;
-  border-radius: 0.2rem;
 }
 .hero-content a:hover {
   cursor: pointer;
@@ -510,10 +496,21 @@ a {
   background-color: #000000;
   border: 1px solid #000000;
   border-radius: 0.2rem;
+  transition: ease 0.5s;
 }
 
 .hero-content .white-heading {
   color: #ffffff;
+}
+.hero-content .white-button {
+  border-color: #ffffff;
+}
+.hero-content .white-button:hover {
+  border: 1px solid #ffffff;
+}
+
+.small-text {
+  text-transform: lowercase;
 }
 
 @media only screen and (max-width: 68.75em) {
@@ -521,11 +518,11 @@ a {
     height: 43.75rem;
   }
   .hero-image.first {
-    background-size: 1200px;
+    background-size: 1400px;
   }
   .hero-image.second {
     top: 46.55rem;
-    background-size: 1700px;
+    background-size: 1400px;
   }
   .hero-image.third {
     top: 90.3rem;
@@ -535,41 +532,26 @@ a {
     top: 134.05rem;
     background-size: 1400px;
   }
-  .hero-image.fifth {
-    top: 177.8rem;
-    background-size: 1200px;
-  }
-  .hero-image.sixth {
-    top: 221.55rem;
-    background-size: 1400px;
-  }
 }
 @media only screen and (max-width: 51.5625em) {
   .hero-image {
     height: 40.625rem;
   }
   .hero-image.first {
-    background-size: 1000px;
+    background-size: 1300px;
   }
   .hero-image.second {
     top: 43.425rem;
-    background-size: 1400px;
+    background-size: 1300px;
     background-position-y: 100%;
   }
   .hero-image.third {
     top: 84.05rem;
     background-size: 1000px;
+    background-position-y: 0%;
   }
   .hero-image.fourth {
     top: 124.675rem;
-    background-size: 1300px;
-  }
-  .hero-image.fifth {
-    top: 165.3rem;
-    background-size: 1000px;
-  }
-  .hero-image.sixth {
-    top: 205.925rem;
     background-size: 1300px;
   }
 }
@@ -578,27 +560,20 @@ a {
     height: 37.5rem;
   }
   .hero-image.first {
-    background-size: 800px;
+    background-size: 1200px;
   }
   .hero-image.second {
     top: 40.3rem;
-    background-size: 1150px;
+    background-size: 1200px;
     background-position-y: -80%;
   }
   .hero-image.third {
     top: 77.8rem;
     background-size: 800px;
+    background-position-y: 30%;
   }
   .hero-image.fourth {
     top: 115.3rem;
-    background-size: 1200px;
-  }
-  .hero-image.fifth {
-    top: 152.8rem;
-    background-size: 800px;
-  }
-  .hero-image.sixth {
-    top: 190.3rem;
     background-size: 1200px;
   }
 }
@@ -607,27 +582,20 @@ a {
     height: 34.375rem;
   }
   .hero-image.first {
-    background-size: 600px;
+    background-size: 1100px;
   }
   .hero-image.second {
     top: 37.175rem;
-    background-size: 1000px;
+    background-size: 950px;
     background-position-y: -20%;
   }
   .hero-image.third {
     top: 71.55rem;
-    background-size: 600px;
+    background-size: 800px;
+    background-position-y: 20%;
   }
   .hero-image.fourth {
     top: 105.925rem;
-    background-size: 1100px;
-  }
-  .hero-image.fifth {
-    top: 140.3rem;
-    background-size: 600px;
-  }
-  .hero-image.sixth {
-    top: 174.675rem;
     background-size: 1100px;
   }
 }
@@ -636,28 +604,26 @@ a {
     height: 31.25rem;
   }
   .hero-image.first {
-    background-size: 450px;
+    background-size: 1000px;
   }
   .hero-image.second {
     top: 34.05rem;
-    background-size: 900px;
-    background-position-y: -30%;
+    background-size: 750px;
+    background-position-y: 20%;
   }
   .hero-image.third {
     top: 65.3rem;
-    background-size: 450px;
+    background-size: 650px;
+    background-position-y: 20%;
   }
   .hero-image.fourth {
     top: 96.55rem;
     background-size: 1000px;
   }
-  .hero-image.fifth {
-    top: 127.8rem;
-    background-size: 450px;
-  }
-  .hero-image.sixth {
-    top: 159.05rem;
-    background-size: 1000px;
+}
+@media only screen and (max-width: 21.25em) {
+  .hero-content a {
+    padding: 0.5rem 1rem;
   }
 }
 body,
