--- a/css/scss/_site-header.scss
+++ b/css/scss/_site-header.scss
@@ -56,6 +56,7 @@ a {
       cursor: pointer;
       border: 1px solid $border-color-01;
       border-radius: 4px;
+      transition: ease 0.5s;
     }
   }
 
